--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Clue Mediator",
-  "license": "ISC",
+  "author": "Ooredoo TN",
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
