--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "first-node-app",
+  "name": "netperfbackend",
   "version": "1.0.0",
   "description": "Test project",
   "main": "index.js",
