--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "netperfbackend",
   "version": "1.0.0",
-  "description": "Test project",
+  "description": "netperf analytics",
   "main": "index.js",
   "scripts": {
     "start": "nodemon server.js",
